--- a/html/login.html
+++ b/html/login.html
@@ -19,6 +19,7 @@
 <header class="header">
     <div class="main-header">
         <div class="container">
+            <div class="imglogo" img=""></div>
             <a href="../index.html" class="logo">Hiệu Sách SGU</a>
             <div class="search-area">
                 <input type="text" placeholder="Tìm kiếm sách...">
