--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
         <div class="main-header">
             <div class="container">
+                <img src="../img/SGU_logo.jpg" class="imglogo" alt="sgu">
                 <a href="index.html" class="logo">Hiệu Sách SGU</a>
                 <div class="search-wrapper">
                     <div class="search-area">
@@ -146,9 +147,9 @@
                 </a>
                 <a href="#" class="category-bar-item" data-category="Manga - Comic">
                     <div class="category-bar-icon bg-purple">
-                        <i class="fas fa-book-open"></i>
+                        <img src="https://cdn1.fahasa.com/media/wysiwyg/Thang-06-2024/icon_ManngaT06.png" class="manga">
                     </div>
-                    <span class="category-name">Manga</span>
+                    <span class="category-name">Manga-Lnovel</span>
                 </a>
 
             </div>
@@ -159,7 +160,14 @@
             <div class="container">
                 <h2 id="featured-books-title">Sách Nổi Bật Tuần Này</h2>              
                 <div class="book-grid" id="main-book-grid">
-                    </div>
+                    <!-- Sách sẽ được JS chèn vào đây -->
+                </div>
+                
+                <!-- VÙNG CHỨA PHÂN TRANG (MỚI) -->
+                <div id="pagination-container" class="pagination-container">
+                    <!-- Các nút phân trang sẽ được JS chèn vào đây -->
+                </div>
+
             </div>
         </section>
     </main>
