--- a/html/product-detail.html
+++ b/html/product-detail.html
@@ -35,10 +35,14 @@
             <div class="main-header">
                 <div class="container">
                     <a href="../index.html" class="logo">Hiệu Sách SGU</a>
+                <div class="search-wrapper">
                     <div class="search-area">
-                        <input type="text" placeholder="Tìm kiếm sách...">
-                        <button class="search-btn"><i class="fas fa-search"></i></button>
+                        <input type="text" placeholder="Tìm kiếm sách..." id="search-input">
+                        <button class="search-btn" id="search-button"><i class="fas fa-search"></i></button>
                     </div>
+                    <div class="search-suggestions" id="search-suggestions">
+                    </div>
+                </div>
                     <div class="header-actions">
                         <div class="action-item"> <i class="far fa-bell"></i>
                             <span>Thông Báo</span>
